@@ -51,6 +51,7 @@ import Bookmarks
 import Errors
 from Filters import SearchBar
 import Utils
+from TransUtils import sgettext as _s
 import const
 
 NAVIGATION_NONE   = -1
@@ -930,7 +931,7 @@ class ListView(BookMarkView):
 
         self._add_action_group(self.edit_action)
 
-        self._add_action('Edit', gtk.STOCK_EDIT, _("_Edit"), 
+        self._add_action('Edit', gtk.STOCK_EDIT, _s("action|_Edit"), 
                          accel="<control>Return", 
                          tip=self.EDIT_MSG, 
                          callback=self.edit)
